# xdp

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build_ebpf.sh  deny.toml  pp.sh  release.toml  run_integ_tests.sh
.cargo/: config.toml
.github/workflows/: ci.yaml
benches/: csum.rs
crates/integ/: Cargo.toml
crates/integ/.cargo/: config.toml
crates/integ/benches/: csum.rs
crates/integ/tests/: ping_pong.rs  tx_checksum.rs
crates/socket-router/: Cargo.toml
crates/socket-router/src/: dummy.c  main.c  main.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs  netlink.rs
crates/tests/: Cargo.toml
crates/tests/benches/: csum.rs  packet.rs
crates/tests/src/: lib.rs
crates/tests/tests/: csum.rs  packet.rs  slab.rs
src/: affinity.rs  bindings.rs  error.rs  lib.rs  libc.rs  mmap.rs  nic.rs  packet.rs  rings.rs  slab.rs  socket.rs  umem.rs
src/nic/: netlink.rs
src/packet/: csum.rs  net_types.rs
src/rings/: completion.rs  fill.rs  rx.rs  tx.rs
tests/: csum.rs  ping_pong.rs  proxy.rs
