[package]
name = "xdp"
version = "0.2.0"
edition = "2021"
description = "AF_XDP socket support without C dependencies"
license = "Apache-2.0 OR MIT"
categories = ["network-programming", "os::linux-apis"]
homepage = "https://github.com/Jake-Shadle/xdp"
repository = "https://github.com/Jake-Shadle/xdp"
documentation = "https://docs.rs/xdp"
exclude = ["*.sh", ".github", "deny.toml", "release.toml", "tests/**"]
rust-version = "1.82.0"

[badges]
maintenance = { status = "actively-developed" }

[workspace]
members = [
    ".",
    "crates/integ",
    "crates/test-utils",
]

[workspace.dependencies]
test-utils = { version = "0.1.0", path = "./crates/test-utils" }
xdp = { version = "0.2.0", path = "." }
etherparse = "0.17"
