[package]
name = "xdp"
version = "0.4.0"
edition = "2024"
description = "AF_XDP socket support without C dependencies"
license = "Apache-2.0 OR MIT"
categories = ["network-programming", "os::linux-apis"]
homepage = "https://github.com/Jake-Shadle/xdp"
repository = "https://github.com/Jake-Shadle/xdp"
documentation = "https://docs.rs/xdp"
exclude = ["*.sh", ".github", "deny.toml", "release.toml", "tests/**"]
rust-version = "1.85.0"

[badges]
maintenance = { status = "actively-developed" }

[features]
__debug = []

[workspace]
members = [
    ".",
    "crates/integ",
    "crates/test-utils",
    "crates/tests",
]

[workspace.dependencies]
test-utils = { version = "0.1.0", path = "./crates/test-utils" }
xdp = { version = "0.4.0", path = ".", features = ["__debug"] }
etherparse = "0.17"
