[package]
name = "integ"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
test-utils.workspace = true
xdp.workspace = true
# Generates test packets
etherparse.workspace = true
# Additional checksum implementation for validation
internet-checksum = "0.2"

[dev-dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "csum"
harness = false
